# petition

./: .gitignore  LICENSE  README.md  docker-compose.yml  todo.md
backend/: .dockerignore  Dockerfile  alembic.ini  create_admin.py  pyproject.toml
backend/migration/: env.py
backend/migration/versions/: 251bf80ee4be_fix4.py  280842d4a4a9_initial.py  30f5d779eec3_fix2.py  32a85098fb01_initial.py  838f08929180_initial.py  be2aad2434f0_fix.py
backend/src/: config.py  database.py  decorators.py  dependencies.py  main.py  mixins.py  types.py
backend/src/auth/: __init__.py  mappers.py  mixins.py  models.py  repository.py  routers.py  schemas.py
backend/src/auth/utils/: passwords.py
backend/src/core/: abstract_repo.py  generic_crud_repo.py  schemas.py  sms_aero.py
backend/src/vote/: __init__.py  dependencies.py  models.py  reposiotory.py  routers.py  schemas.py
caddy/: Caddyfile.example
caddy/caddy_data/caddy/: instance.uuid  last_clean.json
database/: Dockerfile
database/init/: 10_set_password.sh
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/: enums.ts  i18n.ts  middleware.ts  schema.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Dashboard.tsx  Footer.tsx  Header.tsx  LangSwitch.tsx  LoginForm.tsx  Logo.tsx  LogoutButton.tsx  ScrollToTop.tsx  SignCounter.tsx  SrollToTop.tsx  StatusDisplay.tsx  ThankYouBanner.tsx  VoteForm.tsx
frontend/src/lib/: swr.tsx  utils.ts  zodResolver.ts
frontend/src/locales/: ro.json  ru.json
frontend/src/services/: http.ts  (+2 more)
(+21 files in other folders)
