[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "click>=8.2.1",
    "cryptography>=45.0.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pwdlib[argon2]>=0.2.1",
    "pydantic[email]>=2.11.7",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
